# robotai

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  hello  hello.cpp  msgvec_workbook.ipynb  realsensetest.py  requirements.txt  run_realtime.sh  run_tests.sh  run_web.sh  setup_env.sh  setup_vpf.sh  start_web.sh  start_webbackend.sh
cmake/modules/: FindBluetooth.cmake
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  LogList.js  LogTimeline.js  MsgVec.js
lib/jetson_multimedia_api_classes/: SConscript
site_scons/site_tools/: cython.py
src/: SConscript  camerad.cc  camerad.cpp  config.h  encoderd.cc  encoderd.cpp  hello  hello.cpp  loggerd.cc  logutil.py  manager.py  messaging.py  msgr.py  msgtest.py  nvencoder  nvencoder._oldcpp  nvencoder.cc  nvencoder.cpp  nvencoder.h  nvvisionbuf.cc  nvvisionbuf.h  util.h  video.py  visionbuf.cpp  visionbuf.h
src/config/: __init__.py  config.h  config.py  dotdict.py  generate_config_h.py
src/datasets/: __init__.py  chunk.py  modular_addition.py
src/frontend/src/: App.js
src/include/: config.h  config.py  simplebgc.h  util.h
src/models/: model_unet.py  model_vae.py
src/models/stable_baselines3/: buffers.py  dqn.py  env.py  feature_extractor.py  load.py  sac.py
src/models/yolov7/: load.py
src/models/yolov7/models/: common.py  experimental.py  yolo.py
src/modules/: __init__.py  posenc.py  self_attention.py  sum.py  transformer_block.py
src/msgvec/: README.md  msgvec.cc  msgvec.h  pymsgvec.cpp  pymsgvec.pxd  pymsgvec.pyx
src/realtime/: appcontrold.cc  audiod.cc  braind.cc  camerad.cc  camerad_v4l.cc  encoderd.cc  loggerd.cc  loguploader.py  manager.py  micd.cc  nvencoder.cc  nvencoder.h  nvvisionbuf.cc  nvvisionbuf.h  odrived.cc  serial.cc  serial.h  setup.py  simplebgcd.cc
src/realtime/braind/: braind.cc  buffers.h  buffers.hpp  formatters.hpp  logger.h  trtwrapper.hpp
src/realtime/camerad/: NvBufSurface.cpp  NvBufSurface.h  camerad_v4l.cc
src/tests/: ctest_msgvec.cc  ctest_nvencoder.cc  test_arrowmodelcache.py  test_logservice.py  test_logutil.py  test_modelloader.py  test_modelservice.py  test_modelvalidation.py  test_msgvec.py  test_msgvec_discrete.py  test_msgvec_realdata.py  test_msgvec_relative.py  test_msgvecdataset.py  test_msgvecdataset_discrete_manual.py  test_msgvecdataset_manual.py  test_nvencoder.cc  test_onnx_yuv.py  test_rewards.py  test_stable_baselines.py  test_time.py  test_trt.py  test_videodataset.py  test_videoloader.py  test_vpf.py  utils.py
src/train/: arrowcache.py  config_train.py  export_all.py  log_validation.py  mnist_autoencoder_example.py  model_unet.py  modelcacher.py  modelloader.py  onnx_yuv.py  playground.py  pretrain.py  reward.py  reward_modifiers.py  rldataset.py  rldataset_dataloader.py  stable_baselines_buffers.py  stable_baselines_train.py  trt_dataloader.py  videodataset.py  videoloader.py  vision_to_reward_train.py  yolov7.py
src/train/yolov7/: common.py  export.py  load.py  yolov7.py
src/train/yolov7/models/: common.py  experimental.py  yolo.py
src/train/yolov7/utils/: datasets.py
src/utils/: bag2log.py  bag2png.py  draw_bboxes.py  reprocess_logs.py
src/web/: config.py  config_web.py  dependencies.py  logservice.py  main.py  modelservice.py  pageservice.py  parse.py  video.py
src/web/static/: main.css
src/web/templates/: base.html  index.html  log.html
